--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Sisters---Complete_5466
-_version: 0.1.0
+_version: 0.2.0
 alternative_title: Die Schwestern. English
 contributor:
   translator:
@@ -8,6 +8,9 @@ contributor:
     deathdate: 1927
     gutenberg_agent_id: '1801'
     url: http://www.gutenberg.org/2009/agents/1801
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Ebers, Georg
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1800
     wikipedia: http://en.wikipedia.org/wiki/Georg_Ebers
 description: Translation of Die schwestern.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/5466#The-Sisters---Complete
 gutenberg_bookshelf: Historical Fiction
 gutenberg_issued: '2004-11-15'
 gutenberg_type: Text
